Fix the behavior of Safari, overflow-y and height: 100%

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -94,7 +94,6 @@ html, body {
 
 .wnl-app-layout-main {
 	flex: $three-column-main-flex;
-	height: 100%;
 	max-width: 800px;
 	overflow-y: hidden;
 	padding: 0;
